--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>GAME</title>
+	<link rel="stylesheet" href="/css/screen.css" media="screen" type="text/css" />
 </head>
 <body>
 		<canvas id="cnvs" width="1200" height="840">&nbsp;</canvas>
