--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 <body>
 		<canvas id="cnvs" width="1200" height="840">&nbsp;</canvas>
 
-<!--<script src="/socket.io/socket.io.js"></script>-->
+<script src="/socket.io/socket.io.js"></script>
 <script src="js/vendor.js"></script>
 <script src="js/app.js"></script>
 </body>
