--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,9 @@
 	<img class="logo-groot" src="images/logo_groot.png" alt="" />
 	<p class="versus">vs</p>
 	<section id="splash">
+		<img id="manual" src="images/manual.png" />
 		<p>druk op beide knoppen om te starten</p>
-		<img src="images/buttons.png" alt="" />
+ 		<img src="images/buttons.png" alt="" />
 		<p>&copy;2014 devine</p>
 	</section>
 
@@ -19,6 +20,9 @@
 		    <img class="robot spud" src="images/robots/spud.png" />
 		    <img class="robot crank" src="images/robots/crank.png" />
 		    <img class="robot crowby" src="images/robots/crowby.png" />
+		    <img class="weapon s-34" src="images/robots/s-34.png" />
+		    <img class="weapon kx-93" src="images/robots/kx-93.png" />
+		    <img class="weapon kg-43" src="images/robots/kg-43.png" />
 			<img class="indicatorstep1" src="images/indicator.png" alt ="" />
 			<img class="indicatorstep2" src="images/indicator.png" alt ="" />
 			<img class="choices" src="images/choices.png" alt=""/>
@@ -60,7 +64,12 @@
 		</div>
 	</section>
 
+	<div id="reader">
+		<video id="qrvideo" width="600px" height="500px" autoplay="true"></video>
+	</div>
+
 	<section id="chooselongdistanceweapon" class="clearfix">
+
 	<p class="wait">even wachten</p>
 		<div class="player1">
 			<img class="selection" src="images/selection.png" alt="" />
@@ -69,7 +78,7 @@
 				<h1>vomitator</h1>
 			</header>
 			<ul>
-				<li>Herlaadsnelheid <br /> <div class="herlaadsnelheid"></div></li>
+				<li>Snelheid <br /> <div class="herlaadsnelheid"></div></li>
 				<li>Kracht <br /> <div class="kracht"></div></li>
 			</ul>
 		</div>
@@ -81,7 +90,7 @@
 				<h1>vomitator</h1>
 			</header>
 			<ul>
-				<li>Herlaadsnelheid <br /> <div class="herlaadsnelheid"></div></li>
+				<li>Snelheid <br /> <div class="herlaadsnelheid"></div></li>
 				<li>Kracht <br /> <div class="kracht"></div></li>
 			</ul>
 		</div>
@@ -94,6 +103,7 @@
 <script src="/socket.io/socket.io.js"></script>
 <script src="js/vendor.js"></script>
 <script src="js/bitmaptextfield.js"></script>
+<script src="js/qcode-decoder.min.js"></script>
 <script src="js/app.js"></script>
 </body>
 </html>
